meal-ui/src/styles/local/mixins/_text-mixins.scss
@use '@carbon/react/scss/spacing' as *;

// A rough spacing index
// headers           #6
// section headers	 #5
// CTA/action		 #4
// labels 			 #3
// subscript		 #2

@mixin text {
	letter-spacing: 3px;
	text-overflow: ellipsis;
	color: var(--text);
}

@mixin page-heading {
	@include text();
	margin-top: $spacing-06;
	margin-bottom: $spacing-06;
	font-size: 2.4rem;
}

@mixin logo-title {
	color: var(--text);
	font-size: 0.9em;
	text-transform: uppercase;
}

@mixin item-header {
	@include text();
	padding: 0 $spacing-04;
	text-transform: capitalize;
	font-size: 1.3rem;
}

@mixin text-header {
	@include item-header();
	margin: $spacing-05 0;
}

@mixin thick-text {
	@include text();
	font-weight: 800;
}

@mixin action-text {
	@include text();
	padding: $spacing-04 $spacing-06;
	margin: $spacing-02;
}

@mixin wrappable-text {
	white-space: break-spaces;
	overflow-wrap: anywhere;
	margin: $spacing-04;
}

@mixin form-input {
	color: var(--text);
	font-weight: 500;
	padding: $spacing-04;
}

@mixin form-validation-error {
	@include form-input();
	font-size: 0.8rem;
}

@mixin warning-text {
	@include text();
	color: var(--warning);
}

@mixin label {
	@include text();
	text-transform: lowercase;
	opacity: 0.8;
	font-size: 0.85rem;
}

@mixin form-label {
	@include label();
	display: inline-block;
	padding: unset;
	margin-left: 4px;
	margin-bottom: 4px;
}

@mixin label-hover-or-active {
	@include label();
	opacity: 1;
	color: var(--mealui-colors-nero-black);
}

@mixin subscript-label {
	@include text();
	text-transform: lowercase;
	margin-top: $spacing-02;
	margin-bottom: $spacing-02;
	opacity: 0.8;
	font-size: 0.6rem;
}

@mixin disabled-text {
	@include form-input();
	color: var(--text-disabled);
}

